@@ -1,6 +1,7 @@
 uosagas-login-server (0.4) unstable; urgency=low
 
   * fix malformed REMOTE_IP packet header
+  * send AccountLoginReject on password mismatch
 
  --   
 
